[gd_scene load_steps=6 format=3 uid="uid://chtonxaegbo54"]

[ext_resource type="Script" uid="uid://cvuqk6nkfmmx0" path="res://control.gd" id="1_cmhrf"]
[ext_resource type="FontFile" uid="uid://baniet7aixrnq" path="res://m5x7.ttf" id="2_d2nv2"]
[ext_resource type="AudioStream" uid="uid://q6iylgd1j0a2" path="res://Audio/buttonpress.mp3" id="3_igs2m"]
[ext_resource type="AudioStream" uid="uid://vdd7r2c04aob" path="res://Audio/hover-button-287656.mp3" id="4_3pujl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2nv2"]
bg_color = Color(0.938266, 0.355157, 0.634376, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_offset = Vector2(0, 3.5)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cmhrf")

[node name="startbutton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036
anchor_top = 0.674
anchor_right = 0.251
anchor_bottom = 0.802
offset_left = 0.527996
offset_top = 0.247986
offset_right = -0.152008
offset_bottom = 0.303955
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.513726, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_d2nv2")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_d2nv2")
text = "Start"

[node name="quitbutton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.846
anchor_right = 0.253
anchor_bottom = 0.978
offset_left = -0.0159988
offset_top = -0.208008
offset_right = 0.543976
offset_bottom = -4.74402
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.580615, 0.0519404, 0.322269, 1)
theme_override_fonts/font = ExtResource("2_d2nv2")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_d2nv2")
text = "Quit
"

[node name="Title" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.093
anchor_top = 0.005
anchor_right = 0.955
anchor_bottom = 0.179
offset_left = -0.136002
offset_top = -0.24
offset_right = -0.160034
offset_bottom = 1.008
grow_horizontal = 2
theme_override_colors/font_color = Color(0.0627451, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_d2nv2")
theme_override_font_sizes/font_size = 143
theme_override_styles/normal = SubResource("StyleBoxFlat_d2nv2")
text = "Space Survivor"

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_igs2m")

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3pujl")

[connection signal="mouse_entered" from="startbutton" to="." method="_on_startbutton_mouse_entered"]
[connection signal="pressed" from="startbutton" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="quitbutton" to="." method="_on_startbutton_mouse_entered"]
[connection signal="pressed" from="quitbutton" to="." method="_on_quitbutton_pressed"]
[connection signal="pressed" from="quitbutton" to="." method="_on_button_pressed"]
